@@ -272,7 +272,6 @@ var lmsBrowse = Vue.component("lms-browse", {
 
    <RecycleScroller v-else-if="useRecyclerForLists" :items="items" :item-size="LMS_LIST_ELEMENT_SIZE" page-mode key-field="id" :buffer="LMS_SCROLLER_LIST_BUFFER">
     <v-list-tile avatar @click="click(item, index, $event)" slot-scope="{item, index}" @dragstart="dragStart(index, $event)" @dragenter.prevent="" @dragend="dragEnd()" @dragover="dragOver(index, $event)" @drop="drop(index, $event)" :draggable="item.draggable && (current.section!=SECTION_FAVORITES || 0==selection.size)" v-bind:class="{'browse-header':item.header, 'search-highlight':highlightIndex==index, 'highlight':item.highlight, 'list-active': (menu.show && index==menu.index) || (fetchingItem==item.id), 'drop-target':dragActive && index==dropIndex}" @contextmenu.prevent="contextMenu(item, index, $event)">
-     <img v-if="!item.selected && undefined!=item.tracknum && item.id==currentTrack" class="browse-current-indicator" :src="'pq-current' | indIcon"></img>
      <v-list-tile-avatar v-if="item.selected" :tile="true" class="lms-avatar">
       <v-icon>check_box</v-icon>
      </v-list-tile-avatar>
@@ -290,6 +289,9 @@ var lmsBrowse = Vue.component("lms-browse", {
      </v-list-tile-avatar>
 
      <v-list-tile-avatar v-else-if="undefined!=item.tracknum" class="tnum">{{item.tracknum}}</v-list-tile-avatar>
+
+     <img v-if="!item.selected && undefined!=item.tracknum && item.id==currentTrack" class="browse-current-indicator" :src="'pq-current' | indIcon"></img>
+     <img v-else-if="!item.selected && undefined!=item.playlist_track_id && item.playlist_track_id==currentTrack" class="browse-current-indicator-playlist" :src="'pq-current' | indIcon"></img>
 
      <!-- TODO: Do we have search fields with large lists?? -->
      <v-list-tile-content v-if="item.header" @click.stop="click(item, index, $event)">
@@ -405,7 +407,6 @@ var lmsBrowse = Vue.component("lms-browse", {
      </v-list-tile-content>
     </v-list-tile>
     <v-list-tile v-else-if="!(isTop && (disabled.has(item.id) || hidden.has(item.id) || (item.id==TOP_RADIO_ID && lmsOptions.combineAppsAndRadio)) || (queryParams.party && HIDE_TOP_FOR_PARTY.has(item.id)))" avatar @click="click(item, index, $event)" :key="item.id" class="lms-avatar lms-list-item" :id="'item'+index" @dragstart="dragStart(index, $event)" @dragenter.prevent="" @dragend="dragEnd()" @dragover="dragOver(index, $event)" @drop="drop(index, $event)" :draggable="isTop || (item.draggable && (current.section!=SECTION_FAVORITES || 0==selection.size))" @contextmenu.prevent="contextMenu(item, index, $event)" v-bind:class="{'drop-target': dragActive && index==dropIndex, 'search-highlight':highlightIndex==index, 'highlight':item.highlight, 'list-active': (menu.show && index==menu.index) || (fetchingItem==item.id)}">
-     <img v-if="!item.selected && undefined!=item.tracknum && item.id==currentTrack" class="browse-current-indicator" :src="'pq-current' | indIcon"></img>
      <v-list-tile-avatar v-if="item.selected" :tile="true" class="lms-avatar">
       <v-icon>check_box</v-icon>
      </v-list-tile-avatar>
@@ -426,6 +427,9 @@ var lmsBrowse = Vue.component("lms-browse", {
      </v-list-tile-avatar>
 
      <v-list-tile-avatar v-else-if="undefined!=item.tracknum" class="tnum">{{item.tracknum}}</v-list-tile-avatar>
+
+     <img v-if="!item.selected && undefined!=item.tracknum && item.id==currentTrack" class="browse-current-indicator" :src="'pq-current' | indIcon"></img>
+     <img v-else-if="!item.selected && undefined!=item.playlist_track_id && item.playlist_track_id==currentTrack" class="browse-current-indicator-playlist" :src="'pq-current' | indIcon"></img>
 
      <v-list-tile-content>
       <v-list-tile-title v-html="item.title" v-if="undefined!=item.stdItem && (item.stdItem==STD_ITEM_TRACK || item.stdItem==STD_ITEM_ALBUM_TRACK || item.stdItem==STD_ITEM_PLAYLIST_TRACK || item.stdItem==STD_ITEM_REMOTE_PLAYLIST_TRACK)" v-bind:class="{'browse-no-sub':!item.subtitle}"></v-list-tile-title>
