@@ -16,7 +16,8 @@
 13. If sufficient space, place now-plying collapse button bottom left in
     desktop layout. If insufficient space, add to cover overlay.
 14. Show classical work reviews in MAI and browse.
-15. Fix menus soome times having separator as first item.
+15. Fix menus sokmtimes having separator as first item.
+16. Indicate current track when browsing saved playlists.
 
 6.1.7
 -----
